--- a/source-code/frontend/src/app/styles/default/root.scss
+++ b/source-code/frontend/src/app/styles/default/root.scss
@@ -13,6 +13,7 @@
 	--header-height-number: 60;
 	--input-height-number: 50;
 	--input-border-radius-number: 10;
+	--button-border-radius-number: 10;
 
 	// z-index
 	--z-index-burger: 98;
